updating our details

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a 23 year-old software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from San Diego, California.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy running, excercising, and watching Netflix.<p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Someday I would like to have my own company so that I can be my own boss and employ talented individuals.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Austin, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've always loved technology and software and have now taken action to make it my carrer.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/erwinangeles">Github</a></li>
         </ul>
     </footer>
 </body>
